[package]
name = "teo"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["suggestions", "color", "help", "derive"] }
peg = "0.8.1"
rand = "0.8.5"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"

[features]
default = ["print", "return"]
print = []
return = []
