[package]
name = "teolang"
version = "0.5.0"
description = "A programming language design to be easy to learn for kids"
license = "GPL-3.0-only"
repository = "https://github.com/bencinn/teo"
edition = "2021"
authors = ["Hansnnn <iloveheapsort@gmail.com>", "ItsPungpond98 <pongspanichl@gmail.com>", "Kichaguna <attakornprabpon@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["suggestions", "color", "help", "derive"] }
fwdansi = "1.1.0"
libc = "0.2.146"
peg = "0.8.1"
rand = "0.8.5"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = "1.0.164"
serde_json = "1.0.96"
termcolor = "1.2.0"
windows-sys = "0.48.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ast_parser"
harness = false

[target.'cfg(windows)'.dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]

[features]
default = ["print", "return", "input", "split", "inputf", "join"]
print = []
return = []
input = []
split = []
inputf = []
join = []

[[bin]]
name = "teo"
path = "src/main.rs"
